# git-changelog

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  release.yml
assets/templates/: html.hbs  md.hbs
src/: cli.rs  formatting.rs  git.rs  main.rs
