[package]
name = "git-changelog"
version = "0.1.0"
authors = ["Denys Vuika <denys.vuika@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
anyhow = "1.0.40"
serde_json = "1.0"    # Add serde_json.
handlebars = "3.5.5"

[dependencies.serde]  # Add serde in its own section.
version = "1.0"
features = ["derive"] # We'll need the derive feature.